--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "vardelta_jacobzufall"
@@ -13,7 +13,7 @@ readme = "README.md"
 requires-python= ">3.12"
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Apporved :: GPL-2.0 license",
+    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
     "Operating System :: OS Independent",
 ]
 
