--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "vardelta_jacobzufall"
+name = "vardelta"
 version = "1.0"
 authors = [
     {name="Jacob Zufall", email="jacobzufall@gmail.com"}
