--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,4 +19,4 @@ classifiers = [
 
 [project.urls]
 Homepage = "https://github.com/JacobZufall/vardelta"
-issues = "https://github.com/JacobZufall/vardelta/issues"
+Issues = "https://github.com/JacobZufall/vardelta/issues"
