--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "vardelta"
-version = "1.0"
+version = "1.1"
 authors = [
     {name="Jacob Zufall", email="jacobzufall@gmail.com"}
 ]
@@ -19,4 +19,4 @@ classifiers = [
 
 [project.urls]
 Homepage = "https://github.com/JacobZufall/vardelta"
-issues = "https://github.com/JacobZufall/vardelta/issues"
+Issues = "https://github.com/JacobZufall/vardelta/issues"
